Fixed gap for progress viewer (for James)

--- a/acm-prototype/resources/css/app.css
+++ b/acm-prototype/resources/css/app.css
@@ -934,7 +934,7 @@ body.container {
 
 .track-progress[data-steps="3"] li { width: 33%; }
 .track-progress[data-steps="4"] li { width: 24%; }
-.track-progress[data-steps="5"] li { width: 20%; }
+.track-progress[data-steps="5"] li { width: 19%; }
 
 .track-progress li > span {
   display: block;
@@ -942,14 +942,16 @@ body.container {
   color: #999;
   font-weight: bold;
   text-transform: uppercase;
+  
 }
 
 .track-progress li.done > span {
   color: #666;
   background-color: #bef5f6;
+  
 }
 
-	 .track-progress li:first-child i,
+.track-progress li:first-child i,
 .track-progress li:last-child i {
   display: block;
   height: 0;
@@ -971,6 +973,7 @@ body.container {
   border-left-color: transparent;
   border-top-color: white;
   border-bottom-color: white;
+  
 }
 
 
